--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,8 +3,12 @@
     <item
         android:id="@+id/menu_main_activity"
         android:title="@string/main_activity" />
+
     <item
         android:id="@+id/menu_category_activity"
         android:title="@string/category_activity" />
-</menu>
 
+    <item
+        android:id="@+id/menu_category_create_activity"
+        android:title="@string/category_create_activity" />
+</menu>
