--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_main_activity"
         android:title="@string/main_activity" />
@@ -11,4 +12,9 @@
     <item
         android:id="@+id/menu_category_create_activity"
         android:title="@string/category_create_activity" />
+    <item
+        android:id="@+id/menu_category_edit_activity"
+        android:title="Редагувати категорію"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
